objects/Purchase_Receipt__c/Purchase_Receipt__c.object-meta.xml
<CustomObject>
    <label>Purchase Receipt</label>
    <nameField>
        <label>Receipt No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>