objects/Purchase_Receipt__c/fields/Actual_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Receipt_Date__c</fullName>
    <label>Actual Receipt Date</label>
    <type>Date</type>
</CustomField>