objects/Purchase_Receipt__c/fields/Buy_from_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Buy_from_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buy-from Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Receipts</relationshipLabel>
    <relationshipName>Purchase_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>