objects/Purchase_Receipt__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Partially Invoiced</fullName>
            </value>
            <value>
                <fullName>Fully Invoiced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>