objects/Purchase_Receipt__c/fields/Instructions_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Instructions_to_Vendor__c</fullName>
    <label>Instructions to Vendor</label>
    <type>TextArea</type>
</CustomField>