objects/Purchase_Receipt__c/fields/Inter_co_Account__c.field-meta.xml
<CustomField>
    <fullName>Inter_co_Account__c</fullName>
    <formula>Purchase_Order__r.Inter_co_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inter-co Account</label>
    <type>Checkbox</type>
</CustomField>