objects/Purchase_Receipt__c/fields/Inter_Company__c.field-meta.xml
<CustomField>
    <fullName>Inter_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inter-Company</label>
    <type>Checkbox</type>
</CustomField>