objects/Purchase_Receipt__c/fields/PO_Requestor__c.field-meta.xml
<CustomField>
    <fullName>PO_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>