objects/Purchase_Receipt__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Receipts</relationshipLabel>
    <relationshipName>Purchase_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>