objects/Purchase_Receipt__c/fields/Purchase_Order_Sync_d__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Sync_d__c</fullName>
    <formula>Purchase_Order__r.Sync_d__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order Sync'd</label>
    <type>Checkbox</type>
</CustomField>