objects/Purchase_Receipt__c/fields/Purged__c.field-meta.xml
<CustomField>
    <fullName>Purged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purged</label>
    <type>Checkbox</type>
</CustomField>