objects/Purchase_Receipt__c/fields/Receipt_Lines__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Lines__c</fullName>
    <label>Receipt Lines</label>
    <summaryForeignKey>Purch_Rcpt_Line__c.Receipt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>