objects/Purchase_Receipt__c/fields/Return_Order__c.field-meta.xml
<CustomField>
    <fullName>Return_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Order</label>
    <type>Checkbox</type>
</CustomField>