objects/Purchase_Receipt__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <label>Subsidiary Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>