objects/Purchase_Receipt__c/fields/Subsidiary_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company_Name__c</fullName>
    <formula>Purchase_Order__r.Subsidiary_Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary Company Name</label>
    <type>Text</type>
</CustomField>