objects/Purchase_Receipt__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>Purch_Rcpt_Line__c.Line_Cost__c</summarizedField>
    <summaryForeignKey>Purch_Rcpt_Line__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>