objects/Purchase_Receipt__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>Purch_Rcpt_Line__c.Quantity__c</summarizedField>
    <summaryForeignKey>Purch_Rcpt_Line__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>