objects/Purchase_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Status__c</columns>
    <columns>Buy_from_Vendor__c</columns>
    <columns>Actual_Receipt_Date__c</columns>
    <columns>Expected_Receipt_Date__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Receipt_Lines__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Sync_d__c</columns>
    <columns>Subsidiary_Company__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>