objects/Purchase_Receipt__c/listViews/SC09.listView-meta.xml
<ListView>
    <fullName>SC09</fullName>
    <columns>NAME</columns>
    <columns>Document_Status__c</columns>
    <columns>Buy_from_Vendor__c</columns>
    <columns>Actual_Receipt_Date__c</columns>
    <columns>Expected_Receipt_Date__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Receipt_Lines__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Sync_d__c</columns>
    <columns>Subsidiary_Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>09</value>
    </filters>
    <filters>
        <field>Posting_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>SC09</label>
</ListView>